--- a/src/Games.css
+++ b/src/Games.css
@@ -352,3 +352,11 @@
   transform: translateY(-2px);
   box-shadow: 0 4px 12px rgba(30, 58, 138, 0.3);
 }
+
+@media (max-width:480px) {
+  .current-tier {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+}
